<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_reserva"
            android:icon="@drawable/reserva"
            android:title="@string/menu_reserva" />
        <item
            android:id="@+id/nav_salas"
            android:icon="@drawable/salas"
            android:title="@string/menu_salas" />
        <item
            android:id="@+id/nav_sobre_nostros"
            android:icon="@drawable/sobre_nosotros"
            android:title="@string/menu_sobre_nosotros" />
    </group>
</menu>