<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:gravity="center_vertical"
    android:layout_marginBottom="20dp"
    android:background="@drawable/round_verde">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>

        <!-- Agrega TextViews para otros campos de reserva aquí -->
        <TextView
            android:id="@+id/textViewSala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sala"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/textViewNickname"
            android:text="@string/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/textViewNumeroCarnet"
            android:text="@string/numero_de_carnet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/textViewTelefono"
            android:text="@string/tel_fono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/textViewEmail"
            android:text="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/textViewFecha"
            android:text="@string/fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/textViewHoraInicio"
            android:text="@string/hora_inicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/textViewHoraFin"
            android:text="@string/hora_fin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/textViewNumPersonas"
            android:layout_width="match_parent"
            android:text="@string/numero_de_personas"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/textViewComentario"
            android:text="@string/comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="162dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@mipmap/ic_view" />

        <ImageView
            android:id="@+id/imageViewEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@mipmap/ic_edit" />

        <ImageView
            android:id="@+id/imageViewEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_delete" />


    </LinearLayout>

</LinearLayout>
