<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/espacio"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nombreEstablecimientoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nombre_de_establecimiento"
            android:textColor="@color/violeta_neon"
            android:textSize="24sp"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="175dp"
            android:contentDescription="Logo tipo de establecimiento"
            android:src="@drawable/logotransparente"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/DesarrolladorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/nombre_de_desarrollador"
            android:textColor="@color/white"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/nombreDesarrollador1TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/desarrollador1"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/nombreDesarrollador2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/desarrollador2"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginBottom="200dp"/>

        <TextView
            android:id="@+id/copyTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/copysight"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>