<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondolocalizacion"
    tools:context=".ui.sobre_nosotros.SobreNosotroshowFragment" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/m_todos_de_transporte"
            android:textColor="@color/violeta"
            android:textSize="20sp"
            android:background="@drawable/subrayado" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:src="@mipmap/autobus" />

            <TextView
                android:id="@+id/autobus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/horarios_de_autobus"
                android:textColor="@color/azul_enlace"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:src="@mipmap/tren" />

            <TextView
                android:id="@+id/tren"
                android:layout_width="85dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/horarios_tren"
                android:textColor="@color/azul_enlace" />
        </LinearLayout>
        <TextView
            android:id="@+id/ubicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/nuestra_ubicacion"
            android:textColor="@color/violeta"
            android:textSize="20sp"
            android:background="@drawable/subrayado" />
        <TextView
            android:id="@+id/informacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/info_ubicacion"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>
        <org.osmdroid.views.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>