<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btcambio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondonosotros"
    tools:context=".ui.salas.SalashowFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/cambio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/round_rosa"
                android:text="@string/siguiente" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/salaabierta"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_rosa"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="@string/sala_abierta"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="209dp"
                android:src="@drawable/salaabierta" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/descripcionabierta"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/downloadPdfTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Haz clic aquí para descargar el PDF"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:clickable="true"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:onClick="downloadPdf" />

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/salalaberinto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_rosa"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView2we"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="@string/sala_laberinto"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView232"
                android:layout_width="match_parent"
                android:layout_height="209dp"
                android:src="@drawable/salalaberinto" />

            <TextView
                android:id="@+id/textView323"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/descripcionlaberinto"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/downloadPdfTextView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Haz clic aquí para descargar el PDF"
                android:textColor="@color/purple_700"
                android:textStyle="bold"
                android:clickable="true"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:onClick="downloadPdf" />

            <ListView
                android:id="@+id/listViewlaberinto"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/saladosplantas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_rosa"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textViewdosplantas2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center"
                android:text="@string/sala_dos_plantas"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageViewdosplantas"
                android:layout_width="match_parent"
                android:layout_height="209dp"
                android:src="@drawable/saladosplanta" />

            <TextView
                android:id="@+id/textViewdosplantas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/descripcionlaberinto"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/downloadPdfTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Haz clic aquí para descargar el PDF"
                android:textColor="@color/purple_700"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:textStyle="bold"
                android:clickable="true"
                android:onClick="downloadPdf" />

            <ListView
                android:id="@+id/listViewdosplantas"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>